tests/invalid/attribute_aug_assign_non_class/main.py
def main() -> None:
    x: int = 1
    x.y += 1
